# devbox

./: .gitignore  .gitmodules  .nix-channels  .nixpkgs.json  .npmenv  CHANGELOG  CHANGELOG.adoc  Jenkinsfile  Makefile  README.adoc  Vagrantfile  default.nix  devbox.code-workspace  doc.nix  meta.adoc  nixbox.sh  release.nix  utils.sh  version.sh
.config/nix/: nix.conf
.config/nixpkgs/: box.nix  config.nix  home.nix
.config/taffybar/: taffybar.css
.config/termite/: dark  light  nord-termite
.dev/: stack.yaml
.gitignore.d/: dotfiles
.ssh/: config
.xmonad/: xmonad-taffybar.hs
.zsh_custom/: fun.zsh
.zsh_custom/themes/: simple.zsh-theme
bootstrap/: README.adoc  devbox.code-workspace  nixbox.sh  utils.sh  version.sh  wsl.sh
bootstrap/docs/: antora.yml
bootstrap/nixbox/: nixos-x86_64.json
config/: box-cirb.dhall  box.dhall  mr.dhall  shell.dhall  theme
docs/: Makefile  antora.yml  site.yml
system/: configuration.nix  custom-configuration.nix  desktop-configuration.nix  desktop-gnome-configuration.nix  desktop-kde-configuration.nix  desktop-tiling-configuraion.nix  desktop-tiling-configuration.nix  local-configuration.nix  lorri.nix  puppetdb-dns.nix  setenv.sh  windowManager-configuration.nix
test/: .nixpkgs-version.json  Makefile  default.nix  mr.sh
user/: box-cirb.dhall  config.nix  devbox-user.cabal  devbox-user.nix  eclipse-extraplugins.sh  eclipse.sh  local-home.nix  release.nix  setenv.hs  setenv.sh  user-env.cabal
user/config/: box  box.dhall  shell  shell.dhall
user/pkgs/cicd-shell/: default.nix
user/share/: pin.nix
(+115 files in other folders)
