name:                devbox-user
version:             1.2.5
license:             BSD3
maintainer:          pradermecker@cirb.brussels
category:            Script
build-type:          Simple
cabal-version:       >=1.10

data-Files:
    share/.nixpkgs.json
  , share/pin.nix

executable setenv
  main-is:             setenv.hs
  ghc-options:         -Wno-missing-signatures -threaded -rtsopts -with-rtsopts=-N -fdefer-type-errors
  build-depends:       base
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , dhall >= 1.15
                     , foldl >= 1.2
                     , neat-interpolation >= 0.3
                     , mtl
                     , lens >= 4.14
                     , protolude >= 0.2
                     , text
                     , turtle >= 1.3
                     , vector >= 0.11

  other-modules:     Paths_devbox_user
  default-language:  Haskell2010
